# MediFoxApp-v3

./: ReadMe.md
MediFoxApp-v3/: ReadMe.md
MediFoxApp-v3/medifox/: .env  main.py  manage.py  pyproject.toml
MediFoxApp-v3/medifox/agents/agents/: diabetes_doctor.py  general_doctor.py
MediFoxApp-v3/medifox/agents/agents/tools/: common_tools.py
MediFoxApp-v3/medifox/chat/: admin.py  models.py  urls.py  views.py
MediFoxApp-v3/medifox/chat/migrations/: 0003_alter_chatmessage_user.py  0004_chatmessage_parent_message_id_alter_chatmessage_user.py
MediFoxApp-v3/medifox/chat/simpleAgent/: doctor.py
MediFoxApp-v3/medifox/chat/templates/: chat.html  main.html  register.html
MediFoxApp-v3/medifox/medifox/: urls.py  wsgi.py
MediFoxApp-v3/medifox/pharmacy/: models.py
MediFoxApp-v3/medifox/pharmacy/migrations/: 0002_medication_producer_alter_medication_description.py
medifox/: db.sqlite3  pyproject.toml  requirements.txt
medifox/agents/: models.py  prompts.py
medifox/agents/agents/: configuration.py  graph.py  judge.py  tools_and_schemas.py  utils.py
medifox/chat/migrations/: 0001_initial.py  0002_patient_alter_chatmessage_user_delete_medifoxuser.py
medifox/chat/static/css/: style0.css
medifox/chat/static/js/transformers/: transformers.js  transformers.js.map  transformers.min.js.map
medifox/chat/templates/: home.html  login.html
medifox/medifox/: asgi.py  settings.py
medifox/pharmacy/migrations/: 0001_initial.py  0003_manufacturer_remove_medication_producer_and_more.py
post_request_from_pi/: README.md
(+2 files in other folders)
